# creation-hospital-ai

./: .gitignore  app.py  hospital_data.json  main.py  pyproject.toml  requirements.txt  test_rag.py
audio/: stt.py  tts.py
chroma_db/: chroma.sqlite3
chroma_db/bf2c8f51-6471-4d1d-87f5-cb75465f9495/: index_metadata.pickle
data/: hospital_data.json
llm/: gemini.py
rag/: loader.py  rag_engine.py  retriever.py  vectorstore.py
utils/: language.py
